# Authentication_AppDev

./: .gitignore  .render.yaml  README.md  get_token.py  manage.py  pyproject.toml  requirements.txt
Back/: requirements.txt
Back/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/: asgi.py  settings.py  urls.py
front/: package-lock.json
front/public/: index.html
front/src/: App.css  TodoApp.jsx  api.js  styles.css
staticfiles/js/: main.b773665c.js.map
templates/: login.html
todo/: views.py
