[tool.poetry]
name = "authentication-appdev"
version = "0.1.0"
description = ""
authors = ["ElloJhusthine <jhusthine.ello@gmail.com>"]
readme = "README.md"
packages = [
    { include = "backend" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
django = "^5.2"
djangorestframework = "^3.16.0"
dj-database-url = "^2.3.0"
python-dotenv = "^1.1.0"
django-cors-headers = "^4.7.0"
whitenoise = "^6.9.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
